# KDevelop-WebBrowser

./: .gitignore  CMakeLists.txt  KDevelop-WebBrowser.kdev4  KDevelopWebBrowser.desktop  README.md  WebBrowserPlugin.cpp  WebBrowserPlugin.h  WebBrowserView.cpp  WebBrowserView.h
